Update website at commit: f834f3fadaeb6cec7ed02d8a0f9267599a7bd018 f834f3fadaeb6cec7ed02d8a0f9267599a7bd018

--- a/manual/guides/index.html
+++ b/manual/guides/index.html
@@ -49,7 +49,7 @@
                 </button>
                 <a class="logo" href="https://illinois.edu"><img 
                         class="img-responsive pull-left" 
-                        src="https://marketing.illinois.edu/images/brand/design/logo/block-i-primary.png"></a>
+                        src="/img/block_i.png"></a>
                 <a class="navbar-brand page-scroll" href="http://arfc.github.io">ARFC</a>
             </div>
 
@@ -314,7 +314,7 @@ you can really fly.</p>
   <li>Join the <a href="https://www.zotero.org/groups/498713/arfc">ARFC Zotero group</a>.</li>
   <li><a href="https://rsicc.ornl.gov">Request licenses</a> for export controlled software. (Ask Katy if any are needed for your project.)</li>
   <li>Read the <a href="/manual/coc">Code of Conduct</a>.</li>
-  <li>Download the <a href="http://proquest.safaribooksonline.com/9781491901564">book</a>. Browse it now and use it as a reference when you are lost.</li>
+  <li>Download the <a href="https://i-share-uiu.primo.exlibrisgroup.com/permalink/01CARLI_UIU/gpjosq/alma99954930827405899">book</a>. Browse it now and use it as a reference when you are lost.</li>
   <li>Install a text editor of your choosing. (e.g. <a href="http://www.vim.org/">vim</a>, <a href="https://www.gnu.org/software/emacs/">emacs</a>, <a href="https://atom.io/">atom</a>, or <a href="https://github.com/scopatz/xo">xo</a>).</li>
   <li>Install <a href="https://git-scm.com/book/en/v2/Getting-Started-Installing-Git">git</a>.</li>
   <li><a href="https://swcarpentry.github.io/git-novice/02-setup.html">Configure</a> git.</li>
